--- a/index.html
+++ b/index.html
@@ -26,5 +26,26 @@
         </nav>
       </div>
     </header>
+
+    <main>
+      <div class="filme-principal">
+        <div class="container">
+          <h3 class="titulo">O Senhor dos Anéis</h3>
+          <p class="descricao">
+            Em uma terra fantástica e única, um hobbit recebe de presente de seu
+            tio um anel mágico e maligno que precisa ser destruído antes que
+            caia nas mãos do mal. Para isso, o hobbit Frodo tem um caminho árduo
+            pela frente, onde encontra perigo, medo e seres bizarros. Ao seu
+            lado para o cumprimento desta jornada, ele aos poucos pode contar
+            com outros hobbits, um elfo, um anão, dois humanos e um mago,
+            totalizando nove pessoas que formam a Sociedade do Anel.
+          </p>
+        </div>
+        <div class="botoes">
+          <button role="button" class="botao">ASSISTIR AGORA</button>
+          <button role="button" class="botao">MAIS INFORMAÇÕES</button>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
