--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./assets/styles/owl/owl.carousel.min.css" />
+    <link
+      rel="stylesheet"
+      href="./assets/styles/owl/owl.theme.default.min.css"
+    />
 
     <title>Netflix Clone</title>
   </head>
@@ -34,18 +39,80 @@
           <p class="descricao">
             Em uma terra fantástica e única, um hobbit recebe de presente de seu
             tio um anel mágico e maligno que precisa ser destruído antes que
-            caia nas mãos do mal. Para isso, o hobbit Frodo tem um caminho árduo
-            pela frente, onde encontra perigo, medo e seres bizarros. Ao seu
-            lado para o cumprimento desta jornada, ele aos poucos pode contar
-            com outros hobbits, um elfo, um anão, dois humanos e um mago,
-            totalizando nove pessoas que formam a Sociedade do Anel.
+            caia nas mãos do mal.
           </p>
         </div>
         <div class="botoes">
-          <button role="button" class="botao">ASSISTIR AGORA</button>
-          <button role="button" class="botao">MAIS INFORMAÇÕES</button>
+          <button role="button" class="botao">
+            <i class="fas fa-play"></i> ASSISTIR AGORA
+          </button>
+          <button role="button" class="botao">
+            <i class="fas fa-info-circle"></i> MAIS INFORMAÇÕES
+          </button>
         </div>
       </div>
     </main>
+
+    <div class="carrosel-filmes">
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+          <img
+            class="image-filme"
+            src="./assets/img/movie1.jpg"
+            alt="O poderoso chefão"
+          />
+        </div>
+        <div class="item">
+          <img
+            class="image-filme"
+            src="./assets/img/movie2.jpg"
+            alt="O poderoso chefão"
+          />
+        </div>
+        <div class="item">
+          <img
+            class="image-filme"
+            src="./assets/img/movie3.jpg"
+            alt="O poderoso chefão"
+          />
+        </div>
+        <div class="item">
+          <img
+            class="image-filme"
+            src="./assets/img/movie4.jpg"
+            alt="O poderoso chefão"
+          />
+        </div>
+        <div class="item">
+          <img
+            class="image-filme"
+            src="./assets/img/movie5.jpg"
+            alt="O poderoso chefão"
+          />
+        </div>
+        <div class="item">
+          <img
+            class="image-filme"
+            src="./assets/img/movie6.jpg"
+            alt="O poderoso chefão"
+          />
+        </div>
+        <div class="item">
+          <img
+            class="image-filme"
+            src="./assets/img/movie7.jpg"
+            alt="O poderoso chefão"
+          />
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://kit.fontawesome.com/b755a89a93.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./assets/script/owl/jquery.min.js"></script>
+    <script src="./assets/script/owl/owl.carousel.min.js"></script>
+    <script src="./assets/script/owl/setup.js"></script>
   </body>
 </html>
