--- a/index.html
+++ b/index.html
@@ -43,66 +43,110 @@
           </p>
         </div>
         <div class="botoes">
-          <button role="button" class="botao">
-            <i class="fas fa-play"></i> ASSISTIR AGORA
-          </button>
-          <button role="button" class="botao">
-            <i class="fas fa-info-circle"></i> MAIS INFORMAÇÕES
-          </button>
+          <a href="https://www.youtube.com/watch?v=-xg-FkPtLag" target="_blank">
+            <button role="button" class="botao">
+              <i class="fas fa-play"></i> ASSISTIR AGORA
+            </button>
+          </a>
+
+          <a
+            href="https://www.themoviedb.org/movie/120-the-lord-of-the-rings-the-fellowship-of-the-ring?language=pt-BR"
+            target="_blank"
+          >
+            <button role="button" class="botao">
+              <i class="fas fa-info-circle"></i> MAIS INFORMAÇÕES
+            </button>
+          </a>
         </div>
       </div>
     </main>
 
     <div class="carrosel-filmes">
+      <h3>Filmes:</h3>
       <div class="owl-carousel owl-theme">
         <div class="item">
-          <img
-            class="image-filme"
-            src="./assets/img/movie1.jpg"
-            alt="O poderoso chefão"
-          />
+          <a
+            href="https://www.themoviedb.org/movie/238-the-godfather?language=pt-BR"
+            target="_blank"
+          >
+            <img
+              class="image-filme"
+              src="./assets/img/movie1.jpg"
+              alt="O poderoso chefão I"
+            />
+          </a>
         </div>
         <div class="item">
-          <img
-            class="image-filme"
-            src="./assets/img/movie2.jpg"
-            alt="O poderoso chefão"
-          />
+          <a
+            target="_blank"
+            href="https://www.themoviedb.org/movie/240-the-godfather-part-ii?language=pt-BR"
+          >
+            <img
+              class="image-filme"
+              src="./assets/img/movie2.jpg"
+              alt="O poderoso chefão II"
+            />
+          </a>
         </div>
         <div class="item">
-          <img
-            class="image-filme"
-            src="./assets/img/movie3.jpg"
-            alt="O poderoso chefão"
-          />
+          <a
+            href="https://www.themoviedb.org/movie/129?language=pt-BR"
+            target="_blank"
+          >
+            <img
+              class="image-filme"
+              src="./assets/img/movie3.jpg"
+              alt="A Viagem de Chihiro"
+            />
+          </a>
         </div>
         <div class="item">
-          <img
-            class="image-filme"
-            src="./assets/img/movie4.jpg"
-            alt="O poderoso chefão"
-          />
+          <a
+            href="https://www.themoviedb.org/movie/497-the-green-mile?language=pt-BR"
+            target="_blank"
+          >
+            <img
+              class="image-filme"
+              src="./assets/img/movie4.jpg"
+              alt="A espera de um milagre"
+            />
+          </a>
         </div>
         <div class="item">
-          <img
-            class="image-filme"
-            src="./assets/img/movie5.jpg"
-            alt="O poderoso chefão"
-          />
+          <a
+            target="_blank"
+            href="https://www.themoviedb.org/movie/122-the-lord-of-the-rings-the-return-of-the-king?language=pt-BR"
+          >
+            <img
+              class="image-filme"
+              src="./assets/img/movie5.jpg"
+              alt="O senhor dos anéis 3"
+            />
+          </a>
         </div>
         <div class="item">
-          <img
-            class="image-filme"
-            src="./assets/img/movie6.jpg"
-            alt="O poderoso chefão"
-          />
+          <a
+            href="https://www.themoviedb.org/movie/680-pulp-fiction?language=pt-BR"
+            target="_blank"
+          >
+            <img
+              class="image-filme"
+              src="./assets/img/movie6.jpg"
+              alt="Pulp Fiction"
+            />
+          </a>
         </div>
         <div class="item">
-          <img
-            class="image-filme"
-            src="./assets/img/movie7.jpg"
-            alt="O poderoso chefão"
-          />
+          <a
+            href="https://www.themoviedb.org/movie/769-goodfellas?language=pt-BR"
+            target="_blank"
+          >
+            <img
+              class="image-filme"
+              src="./assets/img/movie7.jpg"
+              alt="Os bons companheiros"
+            />
+          </a>
         </div>
       </div>
     </div>
@@ -114,5 +158,6 @@
     <script src="./assets/script/owl/jquery.min.js"></script>
     <script src="./assets/script/owl/owl.carousel.min.js"></script>
     <script src="./assets/script/owl/setup.js"></script>
+    <script src="./assets/script/index.js"></script>
   </body>
 </html>
